test/corpus/func_assign_case_expr.txt
====================
func assign case expr
====================


function int f(Bool y);
  f = case (y)
        True: return 5;
        False: return 7;
      endcase;
endfunction: f


---

(sourceFile
  (packageStmt
    (functionDef
      (functionProto
        (type
          (typePrimary
            (typeIde
        (identifier))))
        (identifier)
        (functionFormals
          (functionFormal
            (type
              (typePrimary
                (typeIde
            (identifier))))
      (identifier))))
      (functionBody
        (identifier)
        (functionBodyStmt
          (expression
            (exprPrimary
          (identifier)))
          (expression
            (exprPrimary
          (identifier)))
          (functionBodyStmt
            (returnStmt
              (expression
                (exprPrimary
                  (intLiteral
                    (unsizedIntLiteral
                      (decNum
          (decDigits))))))))
          (expression
            (exprPrimary
          (identifier)))
          (functionBodyStmt
            (returnStmt
              (expression
                (exprPrimary
                  (intLiteral
                    (unsizedIntLiteral
                      (decNum
      (decDigits))))))))))
(identifier))))
