test/corpus/function_def_short_form.txt
====================
function def short form
====================

function Bool f() = False;

---

(sourceFile
 (packageStmt
  (functionDef
   (functionProto
    (type
     (typePrimary
      (typeIde
       (identifier))))
    (identifier))
   (rValue
    (expression
     (exprPrimary
      (identifier)))))))
