test/corpus/function_operator.txt
====================
function operator
====================

function int \+ (int a, int b);
  return ?;
endfunction

---

    (sourceFile
      (packageStmt
        (functionDef
          (functionProto
            (functionType
              (type
                (typePrimary
                  (typeIde
                    (identifier))))
              (binop)
              (functionFormals
                (functionFormal
                  (type
                    (typePrimary
                      (typeIde
                        (identifier))))
                  (identifier))
                (functionFormal
                  (type
                    (typePrimary
                      (typeIde
                        (identifier))))
                  (identifier)))))
          (functionBody
            (functionBodyStmt
              (returnStmt
                (expression
                  (exprPrimary))))))))
