test/corpus/naked_expr_case_expr.txt
====================
naked expr case expr
====================

typedef enum {Foo, Bar, Foobar} FooNum deriving(Bits, Eq);

module mkCase(Empty);
  Reg#(int) r <- mkReg(0);
  Reg#(FooNum) r_foo <- mkReg(Foo);
  // Reg#(FooNum) r_foo <- case (8) matches 
  //                         2: return mkReg(Foo);
  //                         3: mkReg(Bar);
  //                       endcase;

  rule change_foo;
    r_foo <= case (r_foo) matches
                Foo: Bar;
                Bar: r == 42 ? Foobar : Bar;
                Foobar: Foobar;
             endcase;
  endrule
endmodule

---

    (sourceFile
      (packageStmt
        (typeDef
          (typedefEnum
            (typedefEnumElements
              (typedefEnumElement
                (identifier))
              (typedefEnumElement
                (identifier))
              (typedefEnumElement
                (identifier)))
            (identifier)
            (derives
              (typeclassIde
                (identifier))
              (typeclassIde
                (identifier))))))
      (packageStmt
        (moduleDef
          (moduleProto
            (identifier)
            (moduleFormalArgs
              (type
                (typePrimary
                  (typeIde
                    (identifier))))))
          (moduleStmt
            (moduleInst
              (type
                (typePrimary
                  (typeIde
                    (identifier))
                  (type
                    (typePrimary
                      (typeIde
                        (identifier))))))
              (lValue
                (identifier))
              (moduleApp
                (identifier)
                (moduleActualParamArg
                  (expression
                    (exprPrimary
                      (intLiteral
                        (unsizedIntLiteral
                          (decNum
                            (decDigits))))))))))
          (moduleStmt
            (moduleInst
              (type
                (typePrimary
                  (typeIde
                    (identifier))
                  (type
                    (typePrimary
                      (typeIde
                        (identifier))))))
              (lValue
                (identifier))
              (moduleApp
                (identifier)
                (moduleActualParamArg
                  (expression
                    (exprPrimary
                      (identifier)))))))
          (comment)
          (comment)
          (comment)
          (comment)
          (moduleStmt
            (rule
              (identifier)
              (actionStmt
                (regWrite
                  (lValue
                    (identifier))
                  (rValue
                    (expression
                      (exprPrimary
                        (identifier)))
                    (pattern
                      (constantPattern
                        (identifier)))
                    (expression
                      (exprPrimary
                        (identifier)))
                    (pattern
                      (constantPattern
                        (identifier)))
                    (expression
                      (condExpr
                        (condPredicate
                          (exprOrCondPattern
                            (expression
                              (operatorExpr
                                (expression
                                  (exprPrimary
                                    (identifier)))
                                (binop)
                                (expression
                                  (exprPrimary
                                    (intLiteral
                                      (unsizedIntLiteral
                                        (decNum
                                          (decDigits))))))))))
                        (expression
                          (exprPrimary
                            (identifier)))
                        (expression
                          (exprPrimary
                            (identifier)))))
                    (pattern
                      (constantPattern
                        (identifier)))
                    (expression
                      (exprPrimary
                        (identifier)))))))))))
