test/corpus/power_operator.txt
====================
power operator
====================


module mkShifter (Shifter_IFC #(n));
   for (Integer j = 1; j < j_max; j = j + 1)
      rule rl_j (rg_j == fromInteger (j));
        rg_x <= ((rg_y[j] == 0) ? rg_x : (rg_x << (2**j)));
        rg_j <= rg_j + 1;
      endrule

endmodule


---
